inclusao botao cadastrar categoria

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="categoria">Categoria</string>
     <string name="descricao">Descrição</string>
     <string name="valor">Valor</string>
+    <string name="cadastrar_categoria">Cadastrar Categoria</string>
 </resources>
