ajustes no fluxo de telas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="descricao">Descrição</string>
     <string name="valor">Valor</string>
     <string name="cadastrar_categoria">Cadastrar Categoria</string>
+    <string name="btn_alterar_categoria">Alterar Categoria</string>
 </resources>
